specs/blueprints/errors/validation/expected_fieldset_got_fieldsets.eno
# Expecting a fieldset but getting two fieldsets

-- input
fieldset:
entry = value
fieldset:
entry = value
-- input

-- javascript
enolib.parse(input).fieldset('fieldset');
-- javascript

-- php
Eno\Parser::parse($input)->fieldset('fieldset');
-- php

-- python
enolib.parse(input).fieldset('fieldset')
-- python

-- ruby
Eno.parse(input).fieldset('fieldset')
-- ruby

## ValidationError

-- text
Only a single fieldset with the key 'fieldset' was expected.
-- text

-- snippet
   Line | Content
 >    1 | fieldset:
 *    2 | entry = value
 >    3 | fieldset:
 *    4 | entry = value
-- snippet

selection: [0,0] => [1,13]

# Expecting a fieldset but getting two fieldsets with comments, empty lines and continuations

-- input
> comment
fieldset:
entry = value

entry = value

fieldset:
> comment
entry = value
-- input

-- javascript
enolib.parse(input).fieldset('fieldset');
-- javascript

-- php
Eno\Parser::parse($input)->fieldset('fieldset');
-- php

-- python
enolib.parse(input).fieldset('fieldset')
-- python

-- ruby
Eno.parse(input).fieldset('fieldset')
-- ruby

## ValidationError

-- text
Only a single fieldset with the key 'fieldset' was expected.
-- text

-- snippet
   Line | Content
      1 | > comment
 >    2 | fieldset:
 *    3 | entry = value
 *    4 | 
 *    5 | entry = value
      6 | 
 >    7 | fieldset:
 *    8 | > comment
 *    9 | entry = value
-- snippet

selection: [1,0] => [4,13]
